<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryMain"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="111dp"
        android:layout_height="122dp"
        app:srcCompat="@drawable/ic_paw" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryContrastText"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/tet_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_username"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#B71C1C" />

    <EditText
        android:id="@+id/tet_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:textColorHint="#B71C1C" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorSecondaryLight"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/cb_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|end"
        android:text="@string/action_save_credentials"
        android:textColor="@color/colorPrimaryContrastText" />

    <Button
        android:id="@+id/btn_authenticate"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_marginTop="100dp"
        android:background="#FFB300"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="24dp"
        android:paddingTop="12dp"
        android:paddingEnd="24dp"
        android:paddingBottom="12dp"
        android:text="@string/action_login"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimaryContrastText"
        android:textSize="19sp" />

</LinearLayout>